[package]
name = "dev-null"
version = "0.1.0"
edition = "2021"
license = "MIT"
categories = ["development-tools::testing"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.10"
clap = { version = "4.1.0", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.61"
dotenv = "*"
thiserror = "1"
anyhow = "1"
human-panic = "1"
lazy_static = "1"

tracing-subscriber = { version = "0.3", features = ["registry", "json"] }
tracing-opentelemetry = { version = "0.18" }
tracing-core = "*"
tracing-log = "0.1"
tracing = "0.1"
tracing-attributes = "0.1"
opentelemetry = { version = "0.18", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.11", features = ["metrics"] }
tracing-appender = "0.2.2"
atty = "0.2"
hyper = { version = "0.14", features = ["full"] }
http = "0.2"
bytes = "1.3"
serde_yaml = "0.9"
tower-http = {version = "0.3", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
serde_json = "1.0"
regex = "1.7"
notify = { version = "5.0", default-features = false, features=["macos_kqueue"] }

uuid = { version = "1.2.2", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
]}
futures = "0.3.25"
rand = {version = "0.8.5", features = ["small_rng"] }
