[package]
name = "dev-null-config"
version = "0.1.0"
edition = "2021"
license = "MIT"
categories = ["development-tools::testing"]

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.61"
thiserror = "1"
anyhow = "1"
tracing-core = "*"
tracing = "0.1"
tracing-attributes = "0.1"
hyper = { version = "0.14", features = ["full"] }
http = "0.2"
bytes = "1.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.10"
human-panic = "1"
config = { version = "0.13.1", features = ["yaml", "toml"] }
glob = "0.3.1"
uuid = { version = "1.2.2", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
]}
serde_with = "3.0.0"
