[package]
name = "dev-null-config"
version = "0.1.0"
edition = "2021"
license = "MIT"
categories = ["development-tools::testing"]

[dependencies]
async-trait = "0.1.61"
thiserror = "1"
anyhow = "1"
tracing-core = "*"
tracing = "0.1"
tracing-attributes = "0.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.10"
config = { version = "0.13.1", features = ["yaml", "toml"] }
glob = "0.3.1"
uuid = { version = "1.2.2", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
]}
serde_with = "3.0.0"
