[package]
name = "dev-null-plugin-http"
version = "0.1.0"
edition = "2021"
license = "MIT"
categories = ["development-tools::testing"]

[dependencies]
dev-null-plugin = { path = "../dev-null-plugin" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.10"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
hyper = { version = "0.14", features = ["full"] }
http = "0.2"
bytes = "1.3"
serde_yaml = "0.9"
serde_json = "1.0"
regex = "1.7"
uuid = { version = "1.2.2", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
]}
rand = {version = "0.8.5" }
json = "0.12.4"
figment = { version = "0.10.8", features = ["toml", "yaml", "serde_json", "serde_yaml"] }
