[package]
name = "dev-null-plugin"
version = "0.1.0"
edition = "2021"
license = "MIT"
categories = ["development-tools::testing"]

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.61"
thiserror = "1"
anyhow = "1"
tracing-core = "*"
tracing = "0.1"
tracing-attributes = "0.1"
hyper = { version = "0.14", features = ["full"] }
http = "0.2"
bytes = "1.3"
