[package]
name = "quorra-har"
version = "0.1.0"
edition = "2021"
license = "MIT"
categories = ["development-tools::testing"]

[dependencies]
quorra-config = { path = "../quorra-config" }
async-trait = "0.1.61"
thiserror = "1"
anyhow = "1"
tracing-core = "*"
tracing = "0.1"
tracing-attributes = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_yaml = "0.9"
url = "2"
md5 = "0.7.0"
